fix font size on small screen

--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -190,6 +190,8 @@ img
 	&__title
 		font-size 6rem
 		line-height 1.3
+		@media $phone
+			font-size 5rem
 	&__notice
 		font-size 1.8rem
 		margin 20px 0 80px
